src/style/demo/DemoPlayer.less
@import (css) url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
@import (css) url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');

// "Couldn't load ad" or "You have adblock enabled" warnings
.alert {
	max-width: 600px;
	margin: 0 auto;
	margin-bottom: 1em;
}

.demo-div-container {
	width: 100% !important;
}


// Common display class for various stacked-up elements in the simulated social display:
// fill the container and take position: absolute to stay out of flow.
.fill-abs {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
}

// Time to hold on each slide of the fake feed
@feed-delay: 1.2s;

/** Charity carousel animations */
@keyframes logoFade2a {
	0% { opacity: 1; }
	50% { opacity: 0; }
	100% { opacity: 1; }
}
@keyframes logoFade2b {
	0% { opacity: 0; }
	50% { opacity: 1; }
	100% { opacity: 0; }
}
@keyframes logoFade3a {
	0% { opacity: 1 }
	33.3% { opacity: 0}
	66.6% { opacity: 0}
	100% { opacity: 1}
}
@keyframes logoFade3b {
	0% { opacity: 0 }
	33.3% { opacity: 1 }
	66.6% { opacity: 0 }
	100% { opacity: 0 }
}
@keyframes logoFade3c {
	0% { opacity: 0 }
	33.3% { opacity: 0 }
	66.6% { opacity: 1 }
	100% { opacity: 0 }
}

// Animate the two- or three-charity carousel fade
.charity-carousel {
	.charity-logo {
		animation-iteration-count: infinite;
	}
	&.count2 {
		.charity-logo { animation-duration: 6s; }
		:nth-child(1) { animation-name: logoFade2a; }
		:nth-child(2) { animation-name: logoFade2b; }
	}
	&.count3 {
		.charity-logo { animation-duration: 9s; }
		:nth-child(1) { animation-name: logoFade3a; }
		:nth-child(2) { animation-name: logoFade3b; }
		:nth-child(3) { animation-name: logoFade3c; }
	}
}

/** Fade- or slide-in animations for fake-feed elements */
@keyframes fade-in {
	0% { opacity: 0; }
	100% { opacity: 1; }
}

@keyframes slide-in {
	0% { left: 100%; }
	100% { left: 0; }
}

.fake-feed {
	background-color: black;
	background-size: 100%;

	// Slightly hacky but convenient - apply this class to animate-in elements
	// and they'll show in the same order they appear in the HTML.
	.animate-in-sequence {
		&:nth-child(2) { animation-delay: @feed-delay * 1; }
		&:nth-child(3) { animation-delay: @feed-delay * 2; }
		&:nth-child(4) { animation-delay: @feed-delay * 3; }
		&:nth-child(5) { animation-delay: @feed-delay * 4; }
		&:nth-child(6) { animation-delay: @feed-delay * 5; }
	}
	.fade-in, .slide-in {
		animation-timing-function: ease-in-out;
		animation-fill-mode: both;
		animation-iteration-count: 1;
		animation-duration: @feed-delay / 3; // TODO this is just a guesswork "should look okay" value
	}
	.slide-in {
		animation-name: slide-in;
	}
	.fade-in {
		animation-name: fade-in;
	}

	// The initial slide/screen of the "fake social" display - doesn't animate in.
	.social-splash {
		object-fit: cover;
	}

	// The mock video or banner image - ie the "this is what you'd click on Instagram/Snap/etc" part of the social demo
	// Show the whole image/video in the foreground - the blurred background copy will fill the rest of the screen.
	.mock-ad {
		object-fit: contain;
		object-position: center;
		// The blurred full-screen background copy
		&.bg {
			object-fit: cover;
			filter: blur(10px);
		}
	}

	// Overlay components for the mock banner - eg the "BRAND and CHARITY" and "Swipe to donate" elements
	.mock-overlay {
		background-color: transparent;
		z-index: 2;
	}

	// The ([brand] AND [charities]) and (SWIPE UP TO DONATE) graphics
	.overlay-top, .overlay-bottom {
		position: absolute;
		left: 0;
		width: 100%;
		background-position: center;
		background-size: cover;
	}

	.overlay-top {
		display: flex;
		flex-direction: row;
		justify-content: space-around;

		top: 0;
		height: 15%;
		background-image: url('/img/overlay-insta-top.png');
		// Keep aspect ratio on all logos
		img {
			object-fit: contain;
		}
		.charity-carousel {
			position: relative; // needs to be size/position reference for children
			.charity-logo {
				position: absolute;
				height: 100%;
				width: 100%;
			}
		}
		// Brand logo and charity carousel sizing
		> * {
			height: 100%;
			width: 33%;
		}
	}
	
	.overlay-bottom {
		bottom: 0;
		height: 22%;
		background-image: url('/img/overlay-insta-bottom.png');
	}
}

// Off-set ad to slide it in when mounted.
.social-ad {
	background-color: white;
	top: 100%;
	transition: top 0.4s ease-in;
	&.show {
		top: 0;
	}
}

.adBanner {
	background-color: transparent;
	height: 1px;
	width: 1px;
}

